--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +17,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -28,53 +26,42 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
-
         .input-area {
             margin-top: 20px;
         }
-
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
-
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
-
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
-
+        .copy-button {
+            color: blue;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .copy-button:hover {
+            text-decoration: underline;
+        }
         .message-content p {
             margin-bottom: 0.5em;
         }
-
+        .message-content ul {
+            margin-left: 20px;
+        }
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
         }
-
-        /* Typing effect */
-        .typing-effect {
-            display: inline-block;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            border-right: 2px solid;
-            animation: caret 0.5s steps(1) infinite;
-        }
-
-        @keyframes caret {
-            50% {
-                border-color: transparent;
-            }
-        }
     </style>
 </head>
-
 <body>
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
@@ -90,27 +77,24 @@
         </div>
 
         <div class="chat-container mb-4">
-            <div class="chat chat-start" v-for="(message, index) in messages" :key="index"
-                :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
+            <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
                 <div class="flex items-center mb-2">
-                    <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'"
-                        alt="User or Assistant Icon" class="w-8 h-8 mr-2">
+                    <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 mr-2">
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
-                <div class="message-content" v-if="message.role !== 'typing'" v-html="formatMessage(message.content)"></div>
-                <div v-else class="message-content typing-effect">{{ messageDisplay }}</div>
-                <button v-if="message.role === 'assistant'" @click="copyMessage(message.content)" class="btn btn-sm btn-secondary mt-2">Salin Pesan</button>
+                <div class="message-content" v-html="formatMessageContent(message.content)"></div>
+
+                <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
 
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
 
         <div class="input-area flex items-center">
-            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..."
-                class="input input-bordered w-full mr-2" />
+            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
+            <input type="file" @change="handleFileUpload" class="mr-2" accept="image/*" />
             <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTi6NNzaNW2TmRd3yJfsqPnq_79qZpPX7oYZrtoM3NxXlcbbY7cBPjmXxpYbSMKfkDq1oFrfL-QdN6OqL_XermC91jdTpUHgTMjL9O3lOF0yXlksrl2mhdFxqe0hbwgH2bfVfwg0Ae9HEQ6ebfdaukrLKXUyKuhyT0XZPjrG8X6-dRQDhhwY1D_q5qTjk/s512/60525.png"
-                    alt="Send" class="w-10 h-10" />
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTi6NNzaNW2TmRd3yJfsqPnq_79qZpPX7oYZrtoM3NxXlcbbY7cBPjmXxpYbSMKfkDq1oFrfL-QdN6OqL_XermC91jdTpUHgTMjL9O3lOF0yXlksrl2mhdFxqe0hbwgH2bfVfwg0Ae9HEQ6ebfdaukrLKXUyKuhyT0XZPjrG8X6-dRQDhhwY1D_q5qTjk/s512/60525.png" alt="Send" class="w-10 h-10" />
             </button>
         </div>
     </div>
@@ -122,11 +106,9 @@
             el: '#app',
             data: {
                 inputMessage: '',
-                messages: JSON.parse(localStorage.getItem('chatHistory')) || [],
+                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], 
                 typing: false,
                 firstInteraction: true,
-                messageDisplay: '', // for typing effect
-                fullMessage: '' // store the full message here
             },
             methods: {
                 async sendMessage() {
@@ -135,109 +117,115 @@
                         this.inputMessage = '';
                         this.messages.push(userMessage);
                         this.saveChatHistory();
-
                         this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
 
                         const data = await generateText(this.messages);
-
                         this.typing = false;
-                        this.fullMessage = data; // store the full message to display later
-                        this.messages.push({ role: "typing", content: data }); // start typing effect
-                        this.typingEffect(data);
+                        this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
+                        this.saveChatHistory();
+                        this.sendToDiscord('Assistant', data);
                     }
                 },
+
+                handleFileUpload(event) {
+                    const file = event.target.files[0];
+                    if (file) {
+                        const reader = new FileReader();
+                        reader.onload = (e) => {
+                            const base64Image = e.target.result;
+                            const fileMessage = { role: "user", content: `<img src="${base64Image}" alt="User image" class="w-32 h-32" />` };
+                            this.messages.push(fileMessage);
+                            this.saveChatHistory();
+                            this.sendImageToServer(base64Image);
+                        };
+                        reader.readAsDataURL(file);
+                    }
+                },
+
+                async sendImageToServer(base64Image) {
+                    try {
+                        // Mengirim gambar ke server untuk dianalisis
+                        const response = await fetch('https://chatbotapload.glitch.me', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({ image: base64Image }),
+                        });
+                        const result = await response.json();
+                        this.messages.push({ role: "assistant", content: result.analysis || "Gambar diterima, sedang diproses..." });
+                        this.saveChatHistory();
+                    } catch (error) {
+                        console.error("Error processing image:", error);
+                    }
+                },
+
                 clearChat() {
                     this.messages = [];
-                    this.saveChatHistory();
+                    this.saveChatHistory(); 
                 },
+
                 saveChatHistory() {
                     localStorage.setItem('chatHistory', JSON.stringify(this.messages));
                 },
+
                 cleanUpLinks(message) {
                     return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
                 },
-                typingEffect(content) {
-                    this.messageDisplay = '';
-                    let index = 0;
-                    const interval = setInterval(() => {
-                        // Handle newlines and multiple spaces
-                        if (content[index] === '\n') {
-                            this.messageDisplay += '<br>';
-                        } else if (content[index] === ' ') {
-                            this.messageDisplay += '&nbsp;';
-                        } else {
-                            this.messageDisplay += content[index];
-                        }
-                        index++;
-                        if (index >= content.length) {
-                            clearInterval(interval);
-                            this.messages.pop(); // remove the typing indicator
-                            this.messages.push({ role: "assistant", content: this.fullMessage }); // replace typing effect with full message
-                            this.saveChatHistory();
-                        }
-                    }, 50); // Adjust the speed of typing here (50ms per character)
+
+                formatMessageContent(content) {
+                    content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+                    content = content.replace(/\n/g, '<br>');
+                    return content.replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
                 },
+
+                copyToClipboard(content) {
+                    if (!navigator.clipboard) {
+                        const el = document.createElement('textarea');
+                        el.value = content;
+                        document.body.appendChild(el);
+                        el.select();
+                        document.execCommand('copy');
+                        document.body.removeChild(el);
+                        alert('Pesan berhasil disalin menggunakan metode fallback!');
+                    } else {
+                        navigator.clipboard.writeText(content)
+                            .then(() => alert('Pesan berhasil disalin!'))
+                            .catch(err => console.error('Gagal menyalin teks: ', err));
+                    }
+                },
+
                 async sendToDiscord(role, content) {
                     const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
                     const message = {
                         username: role,
                         content: content,
                     };
-                    try {
-                        await fetch(webhookURL, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(message),
-                        });
-                        console.log('Pesan terkirim ke Discord');
-                    } catch (error) {
-                        console.error('Gagal mengirim pesan ke Discord:', error);
-                    }
-                },
-                formatMessage(content) {
-                    // Replace newline characters and multiple spaces
-                    return content
-                        .replace(/\n/g, '<br>')    // Convert newline to <br>
-                        .replace(/ {2}/g, '&nbsp;&nbsp;')  // Convert double spaces to non-breaking spaces
-                        .replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>'); // Handle bold formatting
-                },
-                copyMessage(content) {
-                    navigator.clipboard.writeText(content).then(() => {
-                        alert('Pesan disalin ke clipboard!');
-                    }).catch(err => {
-                        console.error('Gagal menyalin pesan: ', err);
+                    await fetch(webhookURL, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(message),
                     });
                 }
             }
         });
 
         async function generateText(messages) {
-            const apiKey = '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';
-            const apiURL = 'https://api-inference.huggingface.co/models/declare-lab/flan-alpaca-large';
-
-            const requestMessages = messages.map((msg) => ({
-                role: msg.role,
-                content: msg.content,
-            }));
-
-            const response = await fetch(apiURL, {
+            const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: {
-                    Authorization: `Bearer ${apiKey}`,
+                    'Authorization': `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`,
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    inputs: requestMessages.map((msg) => `${msg.role}: ${msg.content}`).join('\n\n'),
+                    model: 'gpt-4',
+                    messages: messages,
                 }),
             });
-
-            const result = await response.json();
-            return result.generated_text.trim();
+            const data = await response.json();
+            return data.choices[0].message.content;
         }
     </script>
 </body>
-
 </html>
