--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>AI Chatbot Sederhana</title>
+
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -61,9 +68,13 @@
             margin-bottom: 5px;
         }
     </style>
+
 </head>
+
 <body>
+
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
+
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
 
         <div class="text-center mb-4">
@@ -83,7 +94,6 @@
                     <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
                 </div>
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
-
                 <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
 
@@ -97,6 +107,7 @@
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTi6NNzaNW2TmRd3yJfsqPnq_79qZpPX7oYZrtoM3NxXlcbbY7cBPjmXxpYbSMKfkDq1oFrfL-QdN6OqL_XermC91jdTpUHgTMjL9O3lOF0yXlksrl2mhdFxqe0hbwgH2bfVfwg0Ae9HEQ6ebfdaukrLKXUyKuhyT0XZPjrG8X6-dRQDhhwY1D_q5qTjk/s512/60525.png" alt="Send" class="w-10 h-10" />
             </button>
         </div>
+
     </div>
 
     <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
@@ -146,7 +157,7 @@
                 async sendImageToServer(base64Image) {
                     try {
                         // Mengirim gambar ke server untuk dianalisis
-                        const response = await fetch('https://chatbotapload.glitch.me', {
+                        const response = await fetch('https://chatbotapload.glitch.me/upload', { // Ubah ke rute upload
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
@@ -154,7 +165,7 @@
                             body: JSON.stringify({ image: base64Image }),
                         });
                         const result = await response.json();
-                        this.messages.push({ role: "assistant", content: result.analysis || "Gambar diterima, sedang diproses..." });
+                        this.messages.push({ role: "assistant", content: result.message || "Gambar diterima, sedang diproses..." });
                         this.saveChatHistory();
                     } catch (error) {
                         console.error("Error processing image:", error);
@@ -197,35 +208,34 @@
                 },
 
                 async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
-                    const message = {
-                        username: role,
-                        content: content,
-                    };
+                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6_u1xDK6TtdDB2lRU-J_6LX';
                     await fetch(webhookURL, {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(message),
+                        body: JSON.stringify({ content: `${role}: ${content}` }),
                     });
-                }
-            }
+                },
+            },
         });
 
         async function generateText(messages) {
             const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: {
-                    'Authorization': `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`,
                     'Content-Type': 'application/json',
+                    'Authorization': `Bearer ${process.env.SECRET_BEARER_KEY}`, // Ganti dengan Bearer Key dari GitHub
                 },
                 body: JSON.stringify({
-                    model: 'gpt-4',
+                    model: 'gpt-3.5-turbo',
                     messages: messages,
                 }),
             });
+
             const data = await response.json();
             return data.choices[0].message.content;
         }
     </script>
+
 </body>
+
 </html>
