--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html> 
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>AI Chatbot Sederhana</title>
 
+    <!-- CSS dan Font Awesome -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -24,6 +20,7 @@
             display: flex;
             flex-direction: column;
         }
+
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -33,93 +30,79 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
-        .input-area {
-            margin-top: 20px;
-        }
+
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
+
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
+
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
-        .copy-button {
-            color: blue;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .copy-button:hover {
-            text-decoration: underline;
-        }
+
         .message-content p {
             margin-bottom: 0.5em;
         }
-        .message-content ul {
-            margin-left: 20px;
-        }
+
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
         }
     </style>
-
 </head>
 
-<body>
-
-    <div id="app" class="container mx-auto p-4 flex flex-col h-full">
-
-        <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
-
-        <div class="text-center mb-4">
-            <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
-                <button class="btn bg-green-500 hover:bg-green-700 text-white">Laporkan Bug/Saran/Pertanyaan Disini</button>
-            </a>
-        </div>
-
-        <div class="mb-4 text-left">
-            <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">Clear Chat</button>
-        </div>
-
-        <div class="chat-container mb-4">
-            <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
-                <div class="flex items-center mb-2">
-                    <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 mr-2">
-                    <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
-                </div>
-                <div class="message-content" v-html="formatMessageContent(message.content)"></div>
-                <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
+<body class="bg-white h-screen flex flex-col justify-between">
+    <!-- Vue.js root element -->
+    <div id="app" class="flex flex-col h-full">
+        <!-- Header -->
+        <header class="flex items-center justify-between p-4 border-b border-gray-200">
+            <i class="fas fa-bars text-xl"></i>
+            <div class="flex items-center space-x-1">
+                <span class="text-lg font-medium">ChatGPT</span>
+                <i class="fas fa-chevron-down text-sm"></i>
             </div>
+            <i class="fas fa-edit text-xl"></i>
+        </header>
 
-            <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
-        </div>
+        <!-- Main Chat Content -->
+        <main class="flex-grow p-4">
+            <div class="chat-container mb-4">
+                <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
+                    <div class="flex items-center mb-2">
+                        <img :src="message.role === 'user' ? 'https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png' : 'https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg'" alt="User or Assistant Icon" class="w-8 h-8 mr-2">
+                        <div class="message-role">{{ message.role === 'user' ? 'User' : 'Assistant' }}</div>
+                    </div>
+                    <div class="message-content" v-html="formatMessageContent(message.content)"></div>
+                </div>
+                <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
+            </div>
+        </main>
 
-        <div class="input-area flex items-center">
-            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
-            <input type="file" @change="handleFileUpload" class="mr-2" accept="image/*" />
-            <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTi6NNzaNW2TmRd3yJfsqPnq_79qZpPX7oYZrtoM3NxXlcbbY7cBPjmXxpYbSMKfkDq1oFrfL-QdN6OqL_XermC91jdTpUHgTMjL9O3lOF0yXlksrl2mhdFxqe0hbwgH2bfVfwg0Ae9HEQ6ebfdaukrLKXUyKuhyT0XZPjrG8X6-dRQDhhwY1D_q5qTjk/s512/60525.png" alt="Send" class="w-10 h-10" />
-            </button>
-        </div>
-
+        <!-- Footer -->
+        <footer class="p-4 border-t border-gray-200">
+            <div class="flex items-center space-x-2">
+                <i class="fas fa-paperclip text-xl"></i>
+                <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Kirim pesan ke ChatGPT" class="flex-grow p-2 rounded-full border border-gray-300 focus:outline-none">
+                <i @click="sendMessage" class="fas fa-paper-plane text-xl cursor-pointer"></i>
+            </div>
+            <p class="text-xs text-gray-500 mt-2">ChatGPT dapat membuat kesalahan. Periksa info penting.</p>
+        </footer>
     </div>
-
-    <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
 
     <script type="module">
         new Vue({
             el: '#app',
             data: {
                 inputMessage: '',
-                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], 
+                messages: JSON.parse(localStorage.getItem('chatHistory')) || [],
                 typing: false,
-                firstInteraction: true,
             },
             methods: {
                 async sendMessage() {
@@ -128,53 +111,18 @@
                         this.inputMessage = '';
                         this.messages.push(userMessage);
                         this.saveChatHistory();
-                        this.sendToDiscord('User', userMessage.content);
-                        this.typing = true;
 
+                        this.typing = true;
                         const data = await generateText(this.messages);
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
                         this.saveChatHistory();
-                        this.sendToDiscord('Assistant', data);
-                    }
-                },
-
-                handleFileUpload(event) {
-                    const file = event.target.files[0];
-                    if (file) {
-                        const reader = new FileReader();
-                        reader.onload = (e) => {
-                            const base64Image = e.target.result;
-                            const fileMessage = { role: "user", content: `<img src="${base64Image}" alt="User image" class="w-32 h-32" />` };
-                            this.messages.push(fileMessage);
-                            this.saveChatHistory();
-                            this.sendImageToServer(base64Image);
-                        };
-                        reader.readAsDataURL(file);
-                    }
-                },
-
-                async sendImageToServer(base64Image) {
-                    try {
-                        // Mengirim gambar ke server untuk dianalisis
-                        const response = await fetch('https://chatbotapload.glitch.me/upload', { // Ubah ke rute upload
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({ image: base64Image }),
-                        });
-                        const result = await response.json();
-                        this.messages.push({ role: "assistant", content: result.message || "Gambar diterima, sedang diproses..." });
-                        this.saveChatHistory();
-                    } catch (error) {
-                        console.error("Error processing image:", error);
                     }
                 },
 
                 clearChat() {
                     this.messages = [];
-                    this.saveChatHistory(); 
+                    this.saveChatHistory();
                 },
 
                 saveChatHistory() {
@@ -189,53 +137,22 @@
                     content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
                     content = content.replace(/\n/g, '<br>');
                     return content.replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
-                },
-
-                copyToClipboard(content) {
-                    if (!navigator.clipboard) {
-                        const el = document.createElement('textarea');
-                        el.value = content;
-                        document.body.appendChild(el);
-                        el.select();
-                        document.execCommand('copy');
-                        document.body.removeChild(el);
-                        alert('Pesan berhasil disalin menggunakan metode fallback!');
-                    } else {
-                        navigator.clipboard.writeText(content)
-                            .then(() => alert('Pesan berhasil disalin!'))
-                            .catch(err => console.error('Gagal menyalin teks: ', err));
-                    }
-                },
-
-                async sendToDiscord(role, content) {
-                    const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6_u1xDK6TtdDB2lRU-J_6LX';
-                    await fetch(webhookURL, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ content: `${role}: ${content}` }),
-                    });
-                },
-            },
+                }
+            }
         });
 
         async function generateText(messages) {
-            const response = await fetch('https://api.openai.com/v1/chat/completions', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${process.env.SECRET_BEARER_KEY}`, // Ganti dengan Bearer Key dari GitHub
-                },
-                body: JSON.stringify({
-                    model: 'gpt-3.5-turbo',
-                    messages: messages,
-                }),
+            const { HfInference } = await import('https://esm.sh/@huggingface/inference');
+            const hf = new HfInference('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');
+            const response = await hf.chatCompletion({
+                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
+                messages: messages,
+                max_tokens: 500,
+                temperature: 0.3,
+                seed: 0,
             });
-
-            const data = await response.json();
-            return data.choices[0].message.content;
+            return response.choices[0].message.content;
         }
     </script>
-
 </body>
-
 </html>
