--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-
     <style>
         body {
             background-color: #f8fafc;
@@ -17,7 +16,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -27,66 +25,53 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
-
         .input-area {
             margin-top: 20px;
         }
-
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
-
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
-
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
-
         .copy-button {
             color: blue;
             text-decoration: none;
             cursor: pointer;
         }
-
         .copy-button:hover {
             text-decoration: underline;
         }
-
         .message-content p {
             margin-bottom: 0.5em;
         }
-
         .message-content ul {
             margin-left: 20px;
         }
-
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
         }
     </style>
 </head>
-
 <body>
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
         <h1 class="text-3xl font-bold mb-4 text-center">AI Chatbot Sederhana</h1>
-
         <div class="text-center mb-4">
             <a href="https://nevan32.github.io/chatbotforlaporanbugorsaran.github.io/" target="_blank">
                 <button class="btn bg-green-500 hover:bg-green-700 text-white">Laporkan Bug/Saran/Pertanyaan Disini</button>
             </a>
         </div>
-
         <div class="mb-4 text-left">
             <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">Clear Chat</button>
         </div>
-
         <div class="chat-container mb-4">
             <div class="chat chat-start" v-for="(message, index) in messages" :key="index" :class="['chat-bubble', message.role === 'user' ? 'chat-bubble-primary' : 'chat-bubble-secondary']">
                 <div class="flex items-center mb-2">
@@ -96,10 +81,8 @@
                 <div class="message-content" v-html="formatMessageContent(message.content)"></div>
                 <button @click="copyToClipboard(message.content)" class="btn bg-blue-500 hover:bg-blue-700 text-white mt-2">SALIN PESAN INI</button>
             </div>
-
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
-
         <div class="input-area flex items-center">
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
             <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
@@ -107,9 +90,7 @@
             </button>
         </div>
     </div>
-
     <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
-
     <script type="module">
         new Vue({
             el: '#app',
@@ -119,7 +100,6 @@
                 typing: false,
                 firstInteraction: true,
             },
-
             methods: {
                 async sendMessage() {
                     if (this.inputMessage.trim() !== '') {
@@ -127,9 +107,7 @@
                         this.inputMessage = '';
                         this.messages.push(userMessage);
                         this.saveChatHistory();
-
                         this.sendToDiscord('User', userMessage.content);
-
                         this.typing = true;
                         const data = await generateText(this.messages);
                         this.typing = false;
@@ -138,30 +116,21 @@
                         this.sendToDiscord('Assistant', data);
                     }
                 },
-
                 clearChat() {
                     this.messages = [];
                     this.saveChatHistory(); 
                 },
-
                 saveChatHistory() {
                     localStorage.setItem('chatHistory', JSON.stringify(this.messages));
                 },
-
                 cleanUpLinks(message) {
                     return message.replace(/(https?:\/\/[^\s]+)\s+/g, '$1').replace(/\s+(com|org|net|id|co)/g, '$1');
                 },
-
                 formatMessageContent(content) {
                     content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
                     content = content.replace(/\n/g, '<br>');
-                    content = content.replace(/(\d+)\.\s(.+?)(?=<br>|$)/g, '<li>$1. $2</li>');
-                    if (content.includes('<li>')) {
-                        content = `<ul>${content}</ul>`;
-                    }
-                    return content;
+                    return content.replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
                 },
-
                 copyToClipboard(content) {
                     if (!navigator.clipboard) {
                         const el = document.createElement('textarea');
@@ -177,7 +146,6 @@
                             .catch(err => console.error('Gagal menyalin teks: ', err));
                     }
                 },
-
                 async sendToDiscord(role, content) {
                     const webhookURL = 'https://discord.com/api/webhooks/1217243267859480576/PL1j6NAx9_Puug3h2z-TcUPHjPu45XG0BIhSaSqVhVtUd6Kncq3__qvjFSBn_aXGiVHl';
                     const message = {
@@ -198,7 +166,6 @@
                     }
                 }
             },
-
             mounted() {
                 if (this.messages.length === 0) {
                     this.firstInteraction = true;
@@ -208,14 +175,19 @@
 
         async function generateText(messages) {
             const { HfInference } = await import('https://esm.sh/@huggingface/inference');
-            const hf = new HfInference('YOUR_API_KEY');
+            const hf = new HfInference('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');
+
+            // Tambahkan instruksi tak terlihat untuk berbicara bahasa Indonesia
+            const modMessages = [...messages, { role: "system", content: "Berbicaralah bahasa Indonesia" }];
+
             const response = await hf.chatCompletion({
                 model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
-                messages: messages,
+                messages: modMessages,
                 max_tokens: 500,
                 temperature: 0.3,
                 seed: 0,
             });
+
             return response.choices[0].message.content;
         }
     </script>
